--- a/scales_of_balance/lib/YARAS.ini
+++ b/scales_of_balance/lib/YARAS.ini
@@ -13,12 +13,12 @@
 //
 //	BASE AC:
 //
-		SET leather_ac = 	(7 - %enchantment%)
-		SET studded_ac = 	(6 - %enchantment%)
-		SET chain_ac = 		(5 - %enchantment%)
-		SET splint_ac = 	(4 - %enchantment%)
-		SET plate_ac = 		(3 - %enchantment%)
-		SET fullplate_ac = 	(2 - %enchantment%)
+		SET leather_ac = 	(8 - %enchantment%)
+		SET studded_ac = 	(7 - %enchantment%)
+		SET chain_ac = 		(6 - %enchantment%)
+		SET splint_ac = 	(5 - %enchantment%)
+		SET plate_ac = 		(4 - %enchantment%)
+		SET fullplate_ac = 	(3 - %enchantment%)
 //
 //	DAMAGE RESISTANCE:
 //
@@ -28,6 +28,15 @@
 		SET splint_dr = 	(22 + %enchantment%)
 		SET plate_dr = 		(27 + %enchantment%)
 		SET fullplate_dr = 	(33 + %enchantment%)
+//
+//	CASTING SPEED PENALTY:
+//
+		SET leather_cast =		1
+		SET studded_cast =		2
+		SET chain_cast = 		3
+		SET splint_cast = 		4
+		SET plate_cast = 		4
+		SET fullplate_cast = 	5
 //
 //	DEX MODIFIERS:
 //
@@ -55,5 +64,27 @@
 		  SET plate_dex = 		3
 		  SET fullplate_dex = 	3
 		END
+//
+//	THIEF SKILL PENALTIES:
+//
+		SET chain_stealth = 	30
+		SET chain_mech = 		20
+		SET chain_detect = 		10
+
+		SET splint_stealth = 	45
+		SET splint_mech = 		20
+		SET splint_detect = 	10
+
+		SET plate_stealth = 	60
+		SET plate_mech = 		30
+		SET plate_detect = 		30
+
+		SET fullplate_stealth = 90
+		SET fullplate_mech = 	60
+		SET fullplate_detect = 	40
+//
+//	WEAPON SPEED PENALTY:
+//
+
 //__________________________________________________________________________________
 
