--- a/scales_of_balance/ini/YARAS.ini
+++ b/scales_of_balance/ini/YARAS.ini
@@ -91,7 +91,7 @@ READ_LONG 0x60 enchantment
 		SET hide_dex =		%chain_dex%
 //
 //	HOW TO TREAT ELVEN CHAIN:				// Elven chain is as light as leather.
-//											// Or you can just put these as 0 if you want.
+//											// Or you can just set these to 0 if you want.
 		SET elven_cast =	%leather_cast%
 		SET elven_dex =		%leather_dex%
 //
