--- a/scales_of_balance/ini/stats.ini
+++ b/scales_of_balance/ini/stats.ini
@@ -7,16 +7,23 @@
 //__________________________________________________________________________________
 
 
-	OUTER_SET int_prof_1 = 11 		// min INT score for first extra weapon proficiency
-	OUTER_SET int_prof_2 = 12 		// min INT score for second extra weapon proficiency
-	OUTER_SET int_prof_3 = 13 		// min INT score for third extra weapon proficiency
+	OUTER_SET change_STR = 1 		// set to 0 to skip STR changes
+	OUTER_SET change_DEX = 1 		// set to 0 to skip DEX changes
+	OUTER_SET change_INT = 1 		// set to 0 to skip INT changes
+	OUTER_SET change_WIS = 1 		// set to 0 to skip WIS changes
+	OUTER_SET change_CHA = 1 		// set to 0 to skip CHA changes
 
-	OUTER_SET int_spec_1 = 14 		// min INT score for level-1 weapon specialization
+	OUTER_SET int_extra_prof = 1 	// set to 0 to skip extra INT proficiencies
+
+	OUTER_SET int_prof_9 = 13 		// min INT score for 3 extra weapon proficiencies
+	OUTER_SET int_prof_7 = 15 		// min INT score for 4 extra weapon proficiencies
+	OUTER_SET int_prof_5 = 17 		// min INT score for 5 extra weapon proficiencies
 	
 /*
 	OUTER_SET int_crit_1 = 13 		// min INT score for 5% (normal) crit chance
 	OUTER_SET int_crit_2 = 15 		// min INT score for 10% crit chance
 	OUTER_SET int_crit_3 = 18 		// min INT score for 15% crit chance
 */
+
 //__________________________________________________________________________________
 
