--- a/scales_of_balance/ini/YARAS.ini
+++ b/scales_of_balance/ini/YARAS.ini
@@ -22,12 +22,12 @@ READ_LONG 0x60 enchantment
 //
 //	DAMAGE RESISTANCE:
 //
-		SET leather_dr = 	(5 + %enchantment%)
-		SET studded_dr = 	(10 + %enchantment%)
-		SET chain_dr = 		(18 + %enchantment%)
-		SET splint_dr = 	(22 + %enchantment%)
-		SET plate_dr = 		(27 + %enchantment%)
-		SET fullplate_dr = 	(33 + %enchantment%)
+		SET leather_dr = 	(8 + %enchantment%)
+		SET studded_dr = 	(12 + %enchantment%)
+		SET chain_dr = 		(24 + %enchantment%)
+		SET splint_dr = 	(30 + %enchantment%)
+		SET plate_dr = 		(36 + %enchantment%)
+		SET fullplate_dr = 	(42 + %enchantment%)
 //
 //	CASTING SPEED PENALTY: 					//	(**NOTE:** max = 6)
 //
@@ -83,8 +83,8 @@ READ_LONG 0x60 enchantment
 		SET fullplate_mech = 	60
 		SET fullplate_detect = 	40
 //											// These armors have mixed characteristics,
-//	HOW TO TREAT HIDE ARMOR:				// which you can define. Hide has good DR... 
-//											// ...but poor AC, DEX, and casting speed.
+//	HOW TO TREAT HIDE ARMOR:				// which you can define. E.g. hide armor: 
+//											// good DR, poor AC, DEX, and casting speed.
 		SET hide_ac = 		%studded_ac%
 		SET hide_dr = 		%chain_dr%
 		SET hide_cast =		%chain_cast%
@@ -95,8 +95,8 @@ READ_LONG 0x60 enchantment
 		SET elven_cast =	%leather_cast%
 		SET elven_dex =		%leather_dex%
 //
-//	HOW TO TREAT (DRAGON-)SCALE ARMOR:		// Dragonscale is equivalent to plate for AC...
-//											// ...but like splint or chain for DR, DEX, and casting
+//	HOW TO TREAT (DRAGON-)SCALE ARMOR:		// Dragonscale is equivalent to plate for AC;
+//											// but like splint or chain for DR, DEX, and casting
 		SET scale_ac = 		%plate_ac%
 		SET scale_dr = 		%splint_dr%
 		SET scale_cast =	%chain_cast%
