--- a/scales_of_balance/ini/YARAS.ini
+++ b/scales_of_balance/ini/YARAS.ini
@@ -32,15 +32,15 @@ READ_LONG 0x60 enchantment
 //	CASTING SPEED PENALTY: 					//	(**NOTE:** max = 6)
 //
 		SET leather_cast =		2
-		SET studded_cast =		3
-		SET chain_cast = 		4
-		SET splint_cast = 		5
+		SET studded_cast =		2
+		SET chain_cast = 		3
+		SET splint_cast = 		4
 		SET plate_cast = 		5
-		SET fullplate_cast = 	6
+		SET fullplate_cast = 	5
 //
 //	DEX PENALTIES: 							// 	Dex penalties are affected by item enchantment.
 //											// 	If you don't want them to, then...
-		PATCH_IF (%enchantment% = 0) BEGIN 	// 	Make the numbers in these three blocks the same.
+		PATCH_IF (%enchantment% = 0) BEGIN 	// 	Make the numbers in these three blocks identical.
 		  SET leather_dex =		1
 		  SET studded_dex =		2
 		  SET chain_dex = 		3
@@ -67,16 +67,16 @@ READ_LONG 0x60 enchantment
 //
 //	THIEF SKILL PENALTIES:					// This affects heavy armors only; vanilla values
 //											// for leather, hide, & elven chain are not changed
-		SET chain_stealth = 	30
+		SET chain_stealth = 	40
 		SET chain_mech = 		20
-		SET chain_detect = 		10
+		SET chain_detect = 		20
 
-		SET splint_stealth = 	45 			// 	Pick Pockets, Hide in Shadows, Move Silently
-		SET splint_mech = 		20 			// 	Open Locks, Set Traps
-		SET splint_detect = 	10 			// 	Find Traps, Detect Illusions
+		SET splint_stealth = 	60 			// 	"stealth" = Pick Pockets, Hide in Shadows, Move Silently
+		SET splint_mech = 		30 			// 	"mech" = Open Locks, Set Traps
+		SET splint_detect = 	20 			// 	"detect" = Find Traps, Detect Illusions
 
-		SET plate_stealth = 	60
-		SET plate_mech = 		30
+		SET plate_stealth = 	75
+		SET plate_mech = 		50
 		SET plate_detect = 		30
 
 		SET fullplate_stealth = 90
@@ -84,7 +84,7 @@ READ_LONG 0x60 enchantment
 		SET fullplate_detect = 	40
 //											// These armors have mixed characteristics,
 //	HOW TO TREAT HIDE ARMOR:				// which you can define. E.g. hide armor: 
-//											// good DR, poor AC, DEX, and casting speed.
+//											// good DR but poor AC, DEX, and casting speed.
 		SET hide_ac = 		%studded_ac%
 		SET hide_dr = 		%chain_dr%
 		SET hide_cast =		%chain_cast%
