--- a/scales_of_balance/ini/YARAS_default.ini
+++ b/scales_of_balance/ini/YARAS_default.ini
@@ -7,11 +7,14 @@
 //__________________________________________________________________________________
 
 
-READ_LONG 0x60 enchantment
+// You can modify these settings as you see fit (see notes about max values, though). To keep
+// a personalized version of these settings: copy this and rename it to "d5_yaras.ini" and then
+// each time you install mods, drop that file into your /override folder before installing SoB
+
 
 //SET ARMOR CHARACTERISTICS_________________________________________________________
 //
-//	BASE AC:
+//	BASE AC:								// this sets the base AC for the armor
 //
 		SET leather_ac = 	(8 - %enchantment%)
 		SET studded_ac = 	(7 - %enchantment%)
@@ -20,7 +23,7 @@ READ_LONG 0x60 enchantment
 		SET plate_ac = 		(4 - %enchantment%)
 		SET fullplate_ac = 	(3 - %enchantment%)
 //
-//	DAMAGE RESISTANCE:
+//	DAMAGE RESISTANCE:						// this is a percentage bonus
 //
 		SET leather_dr = 	(8 + %enchantment%)
 		SET studded_dr = 	(12 + %enchantment%)
@@ -29,8 +32,8 @@ READ_LONG 0x60 enchantment
 		SET plate_dr = 		(36 + %enchantment%)
 		SET fullplate_dr = 	(42 + %enchantment%)
 //
-//	CASTING SPEED PENALTY: 					//	(**NOTE:** max = 6)
-//
+//	CASTING SPEED PENALTY: 					// this is a static modifier
+//											// 	(**NOTE** the max value = 6)
 		SET leather_cast =		2
 		SET studded_cast =		2
 		SET chain_cast = 		3
@@ -38,35 +41,64 @@ READ_LONG 0x60 enchantment
 		SET plate_cast = 		5
 		SET fullplate_cast = 	5
 //
-//	DEX PENALTIES: 							// 	Dex penalties are affected by item enchantment.
-//											// 	If you don't want them to, then...
-		PATCH_IF (%enchantment% = 0) BEGIN 	// 	Make the numbers in these three blocks identical.
+//	CASTING FAILURE CHANCE:					// no penalty by default;
+//											// this is a percentage chance, so from 0-100
+		SET leather_miscast = 	0 
+		SET studded_miscast = 	0 
+		SET chain_miscast = 	0 
+		SET splint_miscast = 	0 
+		SET plate_miscast = 	0 
+		SET fullplate_miscast = 0 
+//
+//	WEAPON SPEED PENALTY: 					// this is a static modifier
+//											// best to keep it low
+		SET leather_weap =		0
+		SET studded_weap =		0
+		SET chain_weap = 		1
+		SET splint_weap = 		2
+		SET plate_weap = 		2
+		SET fullplate_weap = 	2
+//
+//	MOVEMENT PENALTIES:						// note this is a STATIC modifier - not a percentage
+//											// so best to keep the values between 0 and 4 or so
+		PATCH_IF (%enchantment% = 0) BEGIN
+		  SET leather_move = 	0
+		  SET studded_move = 	0
+		  SET chain_move = 		0
+		  SET splint_move = 	0
+		  SET plate_move = 		0
+		  SET fullplate_move = 	0
+		END
+		PATCH_IF (%enchantment% >= 1) BEGIN
+		  SET leather_move = 	0
+		  SET studded_move = 	0
+		  SET chain_move = 		0
+		  SET splint_move = 	0
+		  SET plate_move = 		0
+		  SET fullplate_move = 	0
+		END
+//
+//	DEX PENALTIES: 							// 	Dex penalties are reduced for enchanted items.
+//											// 	If you don't want that, then...
+		PATCH_IF (%enchantment% = 0) BEGIN 	// 	...make the numbers in these two blocks identical.
 		  SET leather_dex =		1
 		  SET studded_dex =		2
 		  SET chain_dex = 		3
 		  SET splint_dex = 		4
 		  SET plate_dex = 		5
-		  SET fullplate_dex = 	4
+		  SET fullplate_dex = 	5
 		END
-		PATCH_IF (%enchantment% = 1) BEGIN
+		PATCH_IF (%enchantment% >= 1) BEGIN
 		  SET leather_dex =		0
 		  SET studded_dex =		1
 		  SET chain_dex = 		2
 		  SET splint_dex = 		3
 		  SET plate_dex = 		4
-		  SET fullplate_dex = 	3
-		END
-		PATCH_IF (%enchantment% >= 2) BEGIN
-		  SET leather_dex =		0
-		  SET studded_dex =		0
-		  SET chain_dex = 		1
-		  SET splint_dex = 		2
-		  SET plate_dex = 		3
-		  SET fullplate_dex = 	3
+		  SET fullplate_dex = 	4
 		END
 //
 //	THIEF SKILL PENALTIES:					// This affects heavy armors only; vanilla values
-//											// for leather, hide, & elven chain are not changed
+//											// for leather, hide, & elven chain are unchanged
 		SET chain_stealth = 	40
 		SET chain_mech = 		20
 		SET chain_detect = 		20
@@ -88,11 +120,17 @@ READ_LONG 0x60 enchantment
 		SET hide_ac = 		%studded_ac%
 		SET hide_dr = 		%chain_dr%
 		SET hide_cast =		%chain_cast%
+		SET hide_miscast =	%chain_miscast%
+		SET hide_move =		%studded_move%
+		SET hide_weap =		%studded_weap%
 		SET hide_dex =		%chain_dex%
 //
 //	HOW TO TREAT ELVEN CHAIN:				// Elven chain is as light as leather.
 //											// Or you can just set these to 0 if you want.
 		SET elven_cast =	%leather_cast%
+		SET elven_miscast =	0
+		SET elven_move =	%leather_move%
+		SET elven_weap =	%leather_weap%
 		SET elven_dex =		%leather_dex%
 //
 //	HOW TO TREAT (DRAGON-)SCALE ARMOR:		// Dragonscale is equivalent to plate for AC;
@@ -100,6 +138,9 @@ READ_LONG 0x60 enchantment
 		SET scale_ac = 		%plate_ac%
 		SET scale_dr = 		%splint_dr%
 		SET scale_cast =	%chain_cast%
+		SET scale_miscast =	%chain_miscast%
+		SET scale_move =	%chain_move%
+		SET scale_weap =	%chain_weap%
 		SET scale_dex =		%splint_dex%
 		SET scale_stealth =  %splint_stealth%
 		SET scale_mech = 	%splint_mech%
