--- a/scales_of_balance/ini/YARAS_CD.ini
+++ b/scales_of_balance/ini/YARAS_CD.ini
@@ -24,6 +24,17 @@
 		SET plate_ac = 		(3 - %enchantment%)
 		SET fullplate_ac = 	(2 - %enchantment%)
 //
+//	BLOCK ARCANE SPELLCASTING? 				// basic preference: allow casting in armor?
+//											//  '1' means arcane casting is blocked; '0' means not blocked
+		SET leather_block =		0
+		SET studded_block =		0
+		SET hide_block = 		0
+		SET chain_block = 		0
+		SET scale_block = 		0
+		SET splint_block = 		0
+		SET plate_block = 		0
+		SET fullplate_block = 	0
+//
 //	DAMAGE RESISTANCE:						// this is a percentage bonus
 //
 		SET leather_dr = 		0
@@ -35,12 +46,12 @@
 //
 //	CASTING SPEED PENALTY: 					// this is a static modifier
 //											// 	(**NOTE** the max value = 6)
-		SET leather_cast =		0
-		SET studded_cast =		0
-		SET chain_cast = 		0
-		SET splint_cast = 		0
-		SET plate_cast = 		0
-		SET fullplate_cast = 	0
+		SET leather_speed =		0
+		SET studded_speed =		0
+		SET chain_speed = 		0
+		SET splint_speed = 		0
+		SET plate_speed = 		0
+		SET fullplate_speed = 	0
 //
 //	CASTING FAILURE CHANCE:					// this is a percentage chance, so from 0-100
 //
@@ -62,7 +73,7 @@
 		SET plate_weap = 		0
 		SET fullplate_weap = 	0
 //
-//	MOVEMENT PENALTIES:						// note this is a STATIC modifier - not a percentage
+//	MOVEMENT PENALTIES:						// note this is a static modifier - not a percentage
 //											// so best to keep the values between 0 and 4 or so
 		PATCH_IF (%enchantment% = 0) BEGIN
 		  SET leather_move = 	0
@@ -121,14 +132,14 @@
 //	HOW TO TREAT HIDE ARMOR:				// which you can define. E.g. hide armor: 
 //											// good DR but poor AC, DEX, and casting speed.
 		SET hide_dr = 		%chain_dr%
-		SET hide_cast =		%chain_cast%
+		SET hide_speed =	%chain_speed%
 		SET hide_move =		%studded_move%
 		SET hide_weap =		%studded_weap%
 		SET hide_dex =		%chain_dex%
 //
 //	HOW TO TREAT ELVEN CHAIN:				// Elven chain is as light as leather.
 //											// Or you can just set these to 0 if you want.
-		SET elven_cast =	%leather_cast%
+		SET elven_speed =	%leather_speed%
 		SET elven_miscast =	0
 		SET elven_move =	%leather_move%
 		SET elven_weap =	%leather_weap%
@@ -142,7 +153,7 @@
 		SET scale_detect = 	%splint_detect%
 
 		SET scale_dr = 		%splint_dr%
-		SET scale_cast =	%chain_cast%
+		SET scale_speed =	%chain_speed%
 		SET scale_move =	%chain_move%
 		SET scale_weap =	%chain_weap%
 		SET scale_dex =		%splint_dex%
