--- a/scales_of_balance/ini/YARAS_no_casting.ini
+++ b/scales_of_balance/ini/YARAS_no_casting.ini
@@ -7,9 +7,10 @@
 //__________________________________________________________________________________
 
 
-// You can modify these settings as you see fit (see notes about max values, though). To keep
-// a personalized version of these settings: copy this and rename it to "d5_yaras.ini" and then
-// each time you install mods, drop that file into your /override folder before installing SoB
+// These settings match the default YARAS settings for DR, DEX, etc., but do not allow 
+// arcane casting in armor. You can modify these settings as you see fit (see notes about 
+// max values, though). To use these settings, copy this file into your /override folder 
+// and rename it to "d5_yaras.ini" before installing Scales of Balance.
 
 
 //SET ARMOR CHARACTERISTICS_________________________________________________________
@@ -25,14 +26,14 @@
 //
 //	BLOCK ARCANE SPELLCASTING? 				// basic preference: allow casting in armor?
 //											//  '1' means arcane casting is blocked; '0' means not blocked
-		SET leather_block =		0
-		SET studded_block =		0
-		SET hide_block = 		0
-		SET chain_block = 		0
-		SET scale_block = 		0
-		SET splint_block = 		0
-		SET plate_block = 		0
-		SET fullplate_block = 	0
+		SET leather_block =		1
+		SET studded_block =		1
+		SET hide_block = 		1
+		SET chain_block = 		1
+		SET scale_block = 		1
+		SET splint_block = 		1
+		SET plate_block = 		1
+		SET fullplate_block = 	1
 //
 //	DAMAGE RESISTANCE:						// this is a percentage bonus
 //
@@ -45,12 +46,12 @@
 //
 //	CASTING SPEED PENALTY: 					// this is a static modifier
 //											// 	(**NOTE** the max value = 6)
-		SET leather_speed =		2
-		SET studded_speed =		2
-		SET chain_speed = 		3
-		SET splint_speed = 		4
-		SET plate_speed = 		5
-		SET fullplate_speed = 	5
+		SET leather_speed =		0
+		SET studded_speed =		0
+		SET chain_speed = 		0
+		SET splint_speed = 		0
+		SET plate_speed = 		0
+		SET fullplate_speed = 	0
 //
 //	CASTING FAILURE CHANCE:					// no penalty by default;
 //											// this is a percentage chance, so from 0-100
