--- a/scales_of_balance/ini/alternative YARAS settings/d5_YARAS_CD.ini
+++ b/scales_of_balance/ini/alternative YARAS settings/d5_YARAS_CD.ini
@@ -11,6 +11,7 @@
 // and "Allow Arcane Spellcasting in Armor" (in combination).  To use these settings, copy this
 // file into your /override folder and rename it to "d5_yaras.ini" before installing Scales of Balance.
 
+DEFINE_PATCH_MACRO armor_characteristics BEGIN
 
 //SET ARMOR CHARACTERISTICS_________________________________________________________
 //
@@ -158,5 +159,191 @@
 		SET scale_weap =	%chain_weap%
 		SET scale_dex =		%splint_dex%
 
+END	//	end define macro
+
 //__________________________________________________________________________________
 
+
+DEFINE_ACTION_MACRO special_armor_lists BEGIN
+
+//
+//	LIST OF +1 ARMORS
+//
+ACTION_FOR_EACH plus_1 IN 
+  ~x#garch~ 
+  ~a!bleat1~ 
+  ~a!bchan1~ 
+  ~dgi001~ 
+  ~dgi002~ 
+  ~dgi003~ 
+  ~isnfxy7~ 
+  ~l#2sde1~ 
+  ~wqxle1~ 
+  ~bleat01~ 
+  ~gv#naga~ 
+  ~king~ 
+  ~kioyarm1~ 
+  ~l#ulcar~ 
+  ~l#ulcla~ 
+  ~mocm01~ 
+  ~molea01~ 
+  ~ntchan06~ 
+  ~shark3~ 
+BEGIN
+  OUTER_SPRINT $plus_1_armors(~%plus_1%~)~1~
+END
+
+ACTION_FOR_EACH plus_2 IN 
+  ~x#garch2~ 
+  ~a!bleat2~ 
+  ~bdplat01~ 
+  ~bdplat03~ 
+  ~c02plat~ 
+  ~esliarm0~ 
+  ~iswarm~ 
+  ~c0dplat~ 
+  ~chainbm~ 
+  ~dleat10~ 
+  ~l#2sds08~ 
+  ~l#2sdsja~ 
+  ~mocm02~ 
+  ~mofp03~ 
+  ~molea02~ 
+  ~mopm02~ 
+  ~ntleat05~ 
+  ~ogien~ 
+  ~swanarm~ 
+  ~umhulk~ 
+  ~vexed~ 
+  ~vexed2~ 
+  ~vexed3~ 
+  ~xleat03~
+BEGIN
+  OUTER_SPRINT $plus_2_armors(~%plus_2%~)~1~
+END
+
+ACTION_FOR_EACH plus_3 IN 
+  ~l#suma~ 
+  ~cispgrd3~ 
+  ~d0leat08~ 
+  ~esliarm1~ 
+  ~ishcha~ 
+  ~l#2sds08~ 
+  ~o#llch1~ 
+  ~b2#achan~ 
+  ~c02dchan~ 
+  ~c02dplat~ 
+  ~kaychai~ 
+  ~c0sleat~ 
+  ~maillif~ 
+  ~molea03~ 
+  ~shplate~ 
+  ~mourner~
+BEGIN
+  OUTER_SPRINT $plus_3_armors(~%plus_3%~)~1~
+END
+
+ACTION_FOR_EACH plus_4 IN 
+  ~c2plat01~ 
+  ~chan18~ 
+  ~esxcha~ 
+  ~l0skin2~ 
+  ~armpen~ 
+  ~blood~ 
+  ~c02dpla2~ 
+  ~l#fhapla~
+BEGIN
+  OUTER_SPRINT $plus_4_armors(~%plus_4%~)~1~
+END
+
+ACTION_FOR_EACH plus_3 IN 
+  ~l#fhapl2~ 
+  ~glory~
+BEGIN
+  OUTER_SPRINT $plus_5_armors(~%plus_5%~)~1~
+END
+
+ACTION_FOR_EACH caster_armor IN 
+  ~chan12~ 
+  ~chan13~ 
+  ~chan14~ 
+  ~chan15~ 
+  ~chan16~ 
+  ~chan19~ 
+  ~clolth~ 
+  ~dwchan01~ 
+  ~a!bleat1~ 
+  ~a!bleat2~ 
+  ~a!bchan1~ 
+  ~bsingchn~ 
+  ~c2chan01~ 
+  ~chandrw~ 
+  ~cmarq02~ 
+  ~cmarq12~ 
+  ~cmtuch01~ 
+  ~cota~ 
+  ~dsjearm~ 
+  ~echan01~ 
+  ~echan02~ 
+  ~elfmail~ 
+  ~elvarmx~ 
+  ~fwchan02~ 
+  ~gcmch01~ 
+  ~illas04~ 
+  ~kimchain~ 
+  ~kiyoarm1~ 
+  ~kiyoarm2~ 
+  ~kiyoarm3~ 
+  ~kiyowed1~ 
+  ~mau006~ 
+  ~ntchan04~ 
+  ~rr#chn01~ 
+  ~s!chan02~ 
+  ~scal04~ 
+  ~sgchan2~ 
+  ~tzchan01~ 
+  ~u#chan01~ 
+  ~u#chan07~ 
+  ~ucmgch01~ 
+  ~zyplatn8~ 
+  ~chands06~ 
+  ~drowchn1~ 
+  ~drowchn2~ 
+  ~drowchn3~ 
+  ~efml01~ 
+  ~pchan~ 
+  ~AAITM127~ 
+  ~BGSX10~ 
+  ~KOVAWED1~ 
+  ~cmchan02~ 
+  ~elfchan~ 
+  ~kaychai~ 
+  ~ntchan06~ 
+  ~r#aspchn~ 
+  ~tcarmor5~ 
+  ~tcechan~ 
+  ~tcrihar1~ 
+  ~tcrihar2~ 
+  ~tcrivarm~ 
+  ~CMTCH02~ 
+  ~CMTCH03~ 
+  ~CMTCH05~ 
+  ~ESXCHA~ 
+  ~FWCHAN03~ 
+  ~SOAITM01~ 
+  ~J#INDI01~ 
+  ~B2#ACHAN~ 
+  ~L#FARM~ 
+  ~KOVAARM1~ 
+  ~KOVAARM2~ 
+  ~KOVAARM5~ 
+  ~L#ULCLA~ 
+  ~WQXLE1~ 
+  ~X#GARCH~ 
+  ~X#GARCH2~ 
+  ~X3RLEAT~
+BEGIN
+  OUTER_SPRINT $caster_armors(~%caster_armor%~)~1~
+END
+
+END	//	end define macro
