--- a/scales_of_balance/ini/d5_YARAS_default.ini
+++ b/scales_of_balance/ini/d5_YARAS_default.ini
@@ -7,11 +7,11 @@
 //__________________________________________________________________________________
 
 
-// These settings match the default YARAS settings for DR, DEX, etc., but do not allow 
-// arcane casting in armor. You can modify these settings as you see fit (see notes about 
-// max values, though). To use these settings, copy this file into your /override folder 
-// and rename it to "d5_yaras.ini" before installing Scales of Balance.
+// You can modify these settings as you see fit (see notes about max values, though). To keep
+// a personalized version of these settings: copy this and rename it to "d5_yaras.ini" and then
+// each time you install mods, drop that file into your /override folder before installing SoB
 
+DEFINE_PATCH_MACRO armor_characteristics BEGIN
 
 //SET ARMOR CHARACTERISTICS_________________________________________________________
 //
@@ -26,14 +26,14 @@
 //
 //	BLOCK ARCANE SPELLCASTING? 				// basic preference: allow casting in armor?
 //											//  '1' means arcane casting is blocked; '0' means not blocked
-		SET leather_block =		1
-		SET studded_block =		1
-		SET hide_block = 		1
-		SET chain_block = 		1
-		SET scale_block = 		1
-		SET splint_block = 		1
-		SET plate_block = 		1
-		SET fullplate_block = 	1
+		SET leather_block =		0
+		SET studded_block =		0
+		SET hide_block = 		0
+		SET chain_block = 		0
+		SET scale_block = 		0
+		SET splint_block = 		0
+		SET plate_block = 		0
+		SET fullplate_block = 	0
 //
 //	DAMAGE RESISTANCE:						// this is a percentage bonus
 //
@@ -46,12 +46,12 @@
 //
 //	CASTING SPEED PENALTY: 					// this is a static modifier
 //											// 	(**NOTE** the max value = 6)
-		SET leather_speed =		0
-		SET studded_speed =		0
-		SET chain_speed = 		0
-		SET splint_speed = 		0
-		SET plate_speed = 		0
-		SET fullplate_speed = 	0
+		SET leather_speed =		2
+		SET studded_speed =		2
+		SET chain_speed = 		3
+		SET splint_speed = 		4
+		SET plate_speed = 		5
+		SET fullplate_speed = 	5
 //
 //	CASTING FAILURE CHANCE:					// no penalty by default;
 //											// this is a percentage chance, so from 0-100
@@ -158,5 +158,191 @@
 		SET scale_mech = 	%splint_mech%
 		SET scale_detect = 	%splint_detect%
 
+END	//	end define macro
+
 //__________________________________________________________________________________
 
+
+DEFINE_ACTION_MACRO special_armor_lists BEGIN
+
+//
+//	LIST OF +1 ARMORS
+//
+ACTION_FOR_EACH plus_1 IN 
+  ~x#garch~ 
+  ~a!bleat1~ 
+  ~a!bchan1~ 
+  ~dgi001~ 
+  ~dgi002~ 
+  ~dgi003~ 
+  ~isnfxy7~ 
+  ~l#2sde1~ 
+  ~wqxle1~ 
+  ~bleat01~ 
+  ~gv#naga~ 
+  ~king~ 
+  ~kioyarm1~ 
+  ~l#ulcar~ 
+  ~l#ulcla~ 
+  ~mocm01~ 
+  ~molea01~ 
+  ~ntchan06~ 
+  ~shark3~ 
+BEGIN
+  OUTER_SPRINT $plus_1_armors(~%plus_1%~)~1~
+END
+
+ACTION_FOR_EACH plus_2 IN 
+  ~x#garch2~ 
+  ~a!bleat2~ 
+  ~bdplat01~ 
+  ~bdplat03~ 
+  ~c02plat~ 
+  ~esliarm0~ 
+  ~iswarm~ 
+  ~c0dplat~ 
+  ~chainbm~ 
+  ~dleat10~ 
+  ~l#2sds08~ 
+  ~l#2sdsja~ 
+  ~mocm02~ 
+  ~mofp03~ 
+  ~molea02~ 
+  ~mopm02~ 
+  ~ntleat05~ 
+  ~ogien~ 
+  ~swanarm~ 
+  ~umhulk~ 
+  ~vexed~ 
+  ~vexed2~ 
+  ~vexed3~ 
+  ~xleat03~
+BEGIN
+  OUTER_SPRINT $plus_2_armors(~%plus_2%~)~1~
+END
+
+ACTION_FOR_EACH plus_3 IN 
+  ~l#suma~ 
+  ~cispgrd3~ 
+  ~d0leat08~ 
+  ~esliarm1~ 
+  ~ishcha~ 
+  ~l#2sds08~ 
+  ~o#llch1~ 
+  ~b2#achan~ 
+  ~c02dchan~ 
+  ~c02dplat~ 
+  ~kaychai~ 
+  ~c0sleat~ 
+  ~maillif~ 
+  ~molea03~ 
+  ~shplate~ 
+  ~mourner~
+BEGIN
+  OUTER_SPRINT $plus_3_armors(~%plus_3%~)~1~
+END
+
+ACTION_FOR_EACH plus_4 IN 
+  ~c2plat01~ 
+  ~chan18~ 
+  ~esxcha~ 
+  ~l0skin2~ 
+  ~armpen~ 
+  ~blood~ 
+  ~c02dpla2~ 
+  ~l#fhapla~
+BEGIN
+  OUTER_SPRINT $plus_4_armors(~%plus_4%~)~1~
+END
+
+ACTION_FOR_EACH plus_3 IN 
+  ~l#fhapl2~ 
+  ~glory~
+BEGIN
+  OUTER_SPRINT $plus_5_armors(~%plus_5%~)~1~
+END
+
+ACTION_FOR_EACH caster_armor IN 
+  ~chan12~ 
+  ~chan13~ 
+  ~chan14~ 
+  ~chan15~ 
+  ~chan16~ 
+  ~chan19~ 
+  ~clolth~ 
+  ~dwchan01~ 
+  ~a!bleat1~ 
+  ~a!bleat2~ 
+  ~a!bchan1~ 
+  ~bsingchn~ 
+  ~c2chan01~ 
+  ~chandrw~ 
+  ~cmarq02~ 
+  ~cmarq12~ 
+  ~cmtuch01~ 
+  ~cota~ 
+  ~dsjearm~ 
+  ~echan01~ 
+  ~echan02~ 
+  ~elfmail~ 
+  ~elvarmx~ 
+  ~fwchan02~ 
+  ~gcmch01~ 
+  ~illas04~ 
+  ~kimchain~ 
+  ~kiyoarm1~ 
+  ~kiyoarm2~ 
+  ~kiyoarm3~ 
+  ~kiyowed1~ 
+  ~mau006~ 
+  ~ntchan04~ 
+  ~rr#chn01~ 
+  ~s!chan02~ 
+  ~scal04~ 
+  ~sgchan2~ 
+  ~tzchan01~ 
+  ~u#chan01~ 
+  ~u#chan07~ 
+  ~ucmgch01~ 
+  ~zyplatn8~ 
+  ~chands06~ 
+  ~drowchn1~ 
+  ~drowchn2~ 
+  ~drowchn3~ 
+  ~efml01~ 
+  ~pchan~ 
+  ~AAITM127~ 
+  ~BGSX10~ 
+  ~KOVAWED1~ 
+  ~cmchan02~ 
+  ~elfchan~ 
+  ~kaychai~ 
+  ~ntchan06~ 
+  ~r#aspchn~ 
+  ~tcarmor5~ 
+  ~tcechan~ 
+  ~tcrihar1~ 
+  ~tcrihar2~ 
+  ~tcrivarm~ 
+  ~CMTCH02~ 
+  ~CMTCH03~ 
+  ~CMTCH05~ 
+  ~ESXCHA~ 
+  ~FWCHAN03~ 
+  ~SOAITM01~ 
+  ~J#INDI01~ 
+  ~B2#ACHAN~ 
+  ~L#FARM~ 
+  ~KOVAARM1~ 
+  ~KOVAARM2~ 
+  ~KOVAARM5~ 
+  ~L#ULCLA~ 
+  ~WQXLE1~ 
+  ~X#GARCH~ 
+  ~X#GARCH2~ 
+  ~X3RLEAT~
+BEGIN
+  OUTER_SPRINT $caster_armors(~%caster_armor%~)~1~
+END
+
+END	//	end define macro
