--- a/scales_of_balance/scales_of_balance.ini
+++ b/scales_of_balance/scales_of_balance.ini
@@ -10,6 +10,7 @@
 [Metadata]
 Name=Scales of Balance
 Author=Subtledoctor
+LabelType = GloballyUnique
 HomePage=https://github.com/UnearthedArcana/Scales_of_Balance
 Description=Scales of Balance makes a number of tweaks to major aspects of the game rules, such as: how armor works, how weapons and proficiencies work, how saving throws work, how ability scores work, and how you gather experience points.
 Forum=https://www.gibberlings3.net/forums/topic/26838-unearthed-arcana-presents-scales-of-balance-a-post-hac-tweak-pack/#comments
