--- a/scales_of_balance/ini/alternative YARAS settings/d5_YARAS_no_casting.ini
+++ b/scales_of_balance/ini/alternative YARAS settings/d5_YARAS_no_casting.ini
@@ -189,10 +189,30 @@ ACTION_FOR_EACH plus_1 IN
   ~molea01~ 
   ~ntchan06~ 
   ~shark3~ 
+  ~z0leat86~
+  ~z0leat87~
+  ~z0leat88~
+  ~z0leat90~
+  ~z0leat91~
+  ~z0leat92~
+  ~z0leat93~
+  ~z0leat94~
+  ~z0leat95~
+  ~z0leat96~
+  ~z0leat97~
+  ~z0leat98~
+  ~z0leat99~
+  ~z6platag~
+  ~z6platkc~
+  ~z6platof~
+  ~z6changr~
 BEGIN
   OUTER_SPRINT $plus_1_armors(~%plus_1%~)~1~
 END
 
+//
+//	LIST OF +2 ARMORS
+//
 ACTION_FOR_EACH plus_2 IN 
   ~x#garch2~ 
   ~a!bleat2~ 
@@ -218,10 +238,18 @@ ACTION_FOR_EACH plus_2 IN
   ~vexed2~ 
   ~vexed3~ 
   ~xleat03~
+  ~z6leatin~
+  ~z6plataa~
+  ~z6platdc~
+  ~z6chancd~
+  ~z6chansa~
 BEGIN
   OUTER_SPRINT $plus_2_armors(~%plus_2%~)~1~
 END
 
+//
+//	LIST OF +3 ARMORS
+//
 ACTION_FOR_EACH plus_3 IN 
   ~l#suma~ 
   ~cispgrd3~ 
@@ -239,10 +267,16 @@ ACTION_FOR_EACH plus_3 IN
   ~molea03~ 
   ~shplate~ 
   ~mourner~
+  ~z6leatzu~
+  ~z6platpf~
+  ~z6chantm~
 BEGIN
   OUTER_SPRINT $plus_3_armors(~%plus_3%~)~1~
 END
 
+//
+//	LIST OF +4 ARMORS
+//
 ACTION_FOR_EACH plus_4 IN 
   ~c2plat01~ 
   ~chan18~ 
@@ -256,7 +290,10 @@ BEGIN
   OUTER_SPRINT $plus_4_armors(~%plus_4%~)~1~
 END
 
-ACTION_FOR_EACH plus_3 IN 
+//
+//	LIST OF +5 ARMORS
+//
+ACTION_FOR_EACH plus_5 IN 
   ~l#fhapl2~ 
   ~glory~
 BEGIN
